fix hero alignment

--- a/style.css
+++ b/style.css
@@ -570,8 +570,7 @@ footer {
     /* ====================================== hero section =======================================*/
     .hero {
         margin-top: 50px;
-        /* background-position-y: 30px; */
-        background-position-y: 43px;
+        background-position-y: 30px;
         background-size: contain;
         transform-origin: center;
     }
